# mRNAOptimizer

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  pyproject.toml  run_tests.py
cdsopt/: __main__.py  io_utils.py  main.py
cdsopt/fitness/: __init__.py  cache.py  evaluator.py
cdsopt/genetic_alg/: __init__.py  individual.py  nsga2.py  operators.py  processor.py
cdsopt/tables/genetic_code/: __init__.py  standard_code.py
cdsopt/tables/reference_cds/: __init__.py  human.fa
cdsopt/tables/tgcn/: __init__.py
cdsopt/tests/: test_cli.py  test_codon_pair_bias.py  test_fitness.py  test_fold_tools.py  test_individual.py  test_motif_filter.py  test_nsga2.py  test_operators.py  test_processor.py
cdsopt/utils/: cai_tools.py  codon_pair_bias.py  fold_tools.py  motif_filter.py  scoring.py  tai_tools.py
examples/cds_opt_resume/: README.md  config.yaml  run_first.bat  run_first.sh  run_resume.bat  run_resume.sh
examples/cds_optimize/: README.md  config.yaml  init_cds.fa  protein.fa  run.bat  run.sh
examples/cds_report/: README.md  report.csv  run.bat  run.sh  sequences.fa
rnaopt/: __main__.py
rnaopt/tables/codon_frequency_table/: __init__.py  crab_eating_macaque.csv  human.csv  macaca_mulatta.csv  mus_musculus.csv
rnaopt/tables/genetic_code/: vertebrate_mitochondrial_code.py
rnaopt/tables/tgcn/: human.csv
rnaopt/utils/: cai_tools.py  cg_tools.py  tai_tools.py
utropt/: __init__.py  evaluator.py  gemorna_adapter.py  gemorna_generator.py  mirna_seeds.py  rbp_motifs.py  recommender.py  utils.py
