[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rnaopt"
version = "0.1.0"
description = "mRNA sequence optimizer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "biopython==1.85",
    "click==8.2.1",
    "httpx",
    "tqdm",
    "ViennaRNA==2.7.0",
    "cai2==1.0.5",
    "PyYAML==6.0.2",
    "jupyter==1.1.1",
    "codon-bias==0.5.0",
]

[project.scripts]
rnaopt = "rnaopt.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rnaopt*"]
